--- a/static/app.less
+++ b/static/app.less
@@ -1,1 +1,11 @@
 @import "colors";
+
+@import "views/layout/header";
+@import "views/layout/footer";
+@import "views/promo/promo";
+
+body {
+    padding: 0;
+    margin: 0;
+    font: 14px/1.4 Arial, sans-serif;
+}
