--- a/static/colors.less
+++ b/static/colors.less
@@ -1,4 +1,9 @@
 @color-white: #fff;
 @color-black: #000;
+@color-black-half: rgba(0, 0, 0, 0.5);
+@color-black-quatter: rgba(0, 0, 0, 0.25);
+@color-dark-gray: #333;
 @color-gray: #666;
 @color-light-gray: #999;
+@color-yellow: #ff0;
+@color-orange: #fa5000;
