--- a/static/views/app.html
+++ b/static/views/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title ng-bind="$root.pageTitle"></title>
-    <link rel="stylesheet/less" type="text/css" href="{{staticDir}}/app.less" />
+    <link rel="stylesheet/less" type="text/css" href="{{staticDir}}/views/app.less" />
     <script src="{{staticDir}}/libs/less/dist/less.js" type="text/javascript"></script>
     <script data-main="/static/app.js" src="{{staticDir}}/libs/requirejs/require.js"></script>
 </head>
