--- a/static/views/app.less
+++ b/static/views/app.less
@@ -1,8 +1,8 @@
 @import "colors";
 
-@import "views/layout/header";
-@import "views/layout/footer";
-@import "views/promo/promo";
+@import "layout/header";
+@import "layout/footer";
+@import "promo/promo";
 
 body {
     padding: 0;
