--- a/static/views/layout/header.html
+++ b/static/views/layout/header.html
@@ -1,4 +1,4 @@
 <div class="header">
     <div class="logo"></div>
-    <div class="user" ng-include="$root.userView'"></div>
+    <div class="user" ng-include="$root.userView"></div>
 </div>
