--- a/static/views/app.html
+++ b/static/views/app.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title ng-bind="$root.pageTitle"></title>
-    <link rel="stylesheet/less" type="text/css" href="{{staticDir}}/views/app.less" />
-    <script src="{{staticDir}}/libs/less/dist/less.js" type="text/javascript"></script>
-    <script data-main="/static/app.js" src="{{staticDir}}/libs/requirejs/require.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="{{staticRoot}}/views/app.less" />
+    <script src="{{staticRoot}}/libs/less/dist/less.js" type="text/javascript"></script>
 </head>
 <body ng-controller="mainController">
     <div ui-view="header"></div>
@@ -13,5 +12,9 @@
     <div ui-view="left"></div>
     <div ui-view="content"></div>
     <div ui-view="footer"></div>
+    <script>
+        var STATIC_ROOT = '{{staticRoot}}';
+    </script>
+    <script data-main="/static/app.js" src="{{staticRoot}}/libs/requirejs/require.js"></script>
 </body>
 </html>
