Заработал полноценно ui-router

--- a/static/views/app.html
+++ b/static/views/app.html
@@ -5,6 +5,7 @@
     <title ng-bind="$root.pageTitle"></title>
     <link rel="stylesheet/less" type="text/css" href="{{staticRoot}}/views/app.less" />
     <script src="{{staticRoot}}/libs/less/dist/less.js" type="text/javascript"></script>
+    <base href="/">
 </head>
 <body ng-controller="mainController">
     <div ui-view="header"></div>
