--- a/static/views/app.less
+++ b/static/views/app.less
@@ -1,5 +1,6 @@
 @import "colors";
 
+@import "../directives/directives";
 @import "layout/header";
 @import "layout/footer";
 @import "promo/promo";
