--- a/static/views/layout/header.html
+++ b/static/views/layout/header.html
@@ -1,4 +1,7 @@
 <div class="header">
-    <div class="logo"></div>
+    <div class="logo">
+        <a class="header__link" ui-sref="index">Главная страница</a>
+        <a class="header__link" ui-sref="second">Вторая страница</a>
+    </div>
     <div class="user" ng-include="$root.userView"></div>
 </div>
