--- a/static/views/app.html
+++ b/static/views/app.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title ng-bind="$root.pageTitle"></title>
-    <link rel="stylesheet/less" type="text/css" href="{{staticRoot}}/views/app.less" />
-    <script src="{{staticRoot}}/libs/less/dist/less.js" type="text/javascript"></script>
+    <link rel="stylesheet/less" type="text/css" href="{%staticRoot%}/views/app.less" />
+    <script src="{%staticRoot%}/libs/less/dist/less.js" type="text/javascript"></script>
     <base href="/">
 </head>
 <body ng-controller="mainController">
@@ -14,8 +14,8 @@
     <div ui-view="content"></div>
     <div ui-view="footer"></div>
     <script>
-        var STATIC_ROOT = '{{staticRoot}}';
+        var STATIC_ROOT = '{%staticRoot%}';
     </script>
-    <script data-main="/static/app.js" src="{{staticRoot}}/libs/requirejs/require.js"></script>
+    <script data-main="/static/app.js" src="{%staticRoot%}/libs/requirejs/require.js"></script>
 </body>
 </html>
