--- a/static/views/layout/header.html
+++ b/static/views/layout/header.html
@@ -2,6 +2,7 @@
     <div class="logo">
         <a class="header__link" ui-sref="index">Главная страница</a>
         <a class="header__link" ui-sref="second">Вторая страница</a>
+        <a class="header__link" ui-sref="demo">Demo</a>
     </div>
     <div class="user" ng-include="$root.userView"></div>
 </div>
