Страница demo и директива content

--- a/static/views/app.less
+++ b/static/views/app.less
@@ -3,6 +3,7 @@
 @import "../directives/directives";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/layout";
 @import "promo/promo";
 
 body {
