Удалил layout. Добавил deps.js

--- a/static/views/app.less
+++ b/static/views/app.less
@@ -1,10 +1,9 @@
 @import "common/colors";
 
-@import "../directives/directives";
-@import "layout/header";
-@import "layout/footer";
-@import "layout/layout";
+@import "header/header";
 @import "promo/promo";
+@import "footer/footer";
+@import "../directives/directives.deps.less";
 
 body {
     padding: 0;
