Компонент form-by-config

--- a/static/views/pages/demo.html
+++ b/static/views/pages/demo.html
@@ -1,3 +1,4 @@
 <content title="Demo">
-    <p>Пример простого параграфа с текстом</p>
+    <p class="common__p">Пример простого параграфа с текстом</p>
+    <form-by-config form-config="exampleForm"></form-by-config>
 </content>
