--- a/static/views/app.html
+++ b/static/views/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title ng-bind="$root.pageTitle"></title>
+    <title ng-bind="pageTitle"></title>
     <link rel="stylesheet/less" type="text/css" href="{%staticRoot%}/views/app.less" />
     <script src="{%staticRoot%}/libs/less/dist/less.js" type="text/javascript"></script>
     <base href="/">
