--- a/static/views/app.html
+++ b/static/views/app.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title ng-bind="pageTitle"></title>
+    <title ng-bind="pageTitle || 'Удаленная работа в команде'"></title>
     <link rel="stylesheet/less" type="text/css" href="{%staticRoot%}/views/app.less" />
     <script src="{%staticRoot%}/libs/less/dist/less.js" type="text/javascript"></script>
     <base href="/">
 </head>
-<body ng-controller="mainController">
+<body>
     <div ui-view="header"></div>
     <div ui-view="promo"></div>
     <div ui-view="left"></div>
