--- a/static/views/form-by-config/form-by-config.html
+++ b/static/views/form-by-config/form-by-config.html
@@ -1,5 +1,8 @@
 <form action="{{formConfig.action}}">
-    <div ng-repeat="field in formConfig.fields">
-        <ng-include src="field.templateUrl"></ng-include>
+    <div ng-repeat="field in formConfig.fields" class="field-row field-row_name_{{field.name}}">
+        <div class="field-row__title" ng-if="field.title">{{field.title}}</div>
+        <div class="field-row__field">
+            <ng-include src="field.templateUrl"></ng-include>
+        </div>
     </div>
 </form>
