Обновление содержимого страницы без перезагрузки

--- a/components/components.less
+++ b/components/components.less
@@ -1,2 +1,12 @@
-@import "../node_modules/bootstrap/less/bootstrap";
+// Core variables and mixins
+@import "../node_modules/bootstrap/less/variables.less";
+@import "../node_modules/bootstrap/less/mixins.less";
+
+// Reset and dependencies
+@import "../node_modules/bootstrap/less/normalize.less";
+@import "../node_modules/bootstrap/less/print.less";
+@import "../node_modules/bootstrap/less/glyphicons.less";
+
+@import "../node_modules/bootstrap/less/buttons";
+@import "../node_modules/bootstrap/less/forms";
 @import "header/header";
